--- a/src/app/paginas/nuevo-personaje/nuevo-personaje.component.html
+++ b/src/app/paginas/nuevo-personaje/nuevo-personaje.component.html
@@ -12,11 +12,19 @@
         <label for="url_img">Imagen</label>
         <input type="url" formControlName="url">
         <br>
-        
-        <input type="submit" class="btn--blue btn--add" [disabled]="!newPJForm.valid" value="Agregar">
+
+        <label for="descripcion">Descripcion:</label>
+        <textarea  formControlName="descripcion" > </textarea>
+        <br>
+
+        <label for="saga">Saga</label>
+        <input type="text" formControlName="saga">
+        <br>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-danger " (click)="bsModalRef.hide()">Cancelar</button>
+            <input type="submit"  class="btn btn-primary" [disabled]="!newPJForm.valid" value="Agregar">
+        </div>
     </form>
-</div>
-<div class="modal-footer">
-  <button type="submit" (click)="tryLogin(loginForm.value)" class="btn btn-primary ">Crear personaje</button> 
-  <button type="button" class="btn btn-danger " (click)="bsModalRef.hide()">Cancelar</button>
+
+    
 </div>
