--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,21 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark " *ngIf="menuAbierto">
-  <a class="navbar-brand" routerLink="/user">Menu</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark barra" *ngIf="menuAbierto">
+  
+  <a class="navbar-brand" routerLink="/user" *ngIf="logged" >Smash Bros Character Creator</a>
+  <a class="navbar-brand" routerLink="/user" *ngIf="!logged" > No tienes permitido acceder a esta pagina</a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/user"> Inicio </a>
-      </li>
-      <li class="nav-item active">
-        <a class="btn btn-primary" (click)="logout()" *ngIf="logged" routerLink="/login"> Cerrar Sesion </a>
-      </li>
-      <li>
-        <button type="button" class="btn btn-primary" (click)="openModalWithComponent()">Crear un personaje</button>
-    </li>
-      
-    </ul>
+  <div  class="crearPersonaje"> 
+  <button type="button" class="btn btn-primary" (click)="openModalWithComponent()" *ngIf="logged" [disabled]="editando">Crear un personaje</button>
   </div>
+
+  
+  <div>
+    <a class="btn btn-primary cerrarSesion" (click)="logout()" *ngIf="logged" routerLink="/login"> Cerrar Sesion </a>
+    <a class="btn btn-primary cerrarSesion" *ngIf="!logged" routerLink="/login"> Iniciar sesion</a>
+  </div>
+
 </nav>
