--- a/src/app/paginas/pagina-principal/pagina-principal.component.html
+++ b/src/app/paginas/pagina-principal/pagina-principal.component.html
@@ -85,7 +85,7 @@
          <div class="card" >
              <div class="front">
                  <div class="cover">
-                     <img src="../../../assets/theme.jpg"/>
+                     <img src="assets/theme.jpg"/>
                  </div>
                  <div class="user">
                      <img class="img-circle" [src]="pj.data.url"/>
@@ -111,13 +111,13 @@
 
                          <h4 class="text-center">Mov. especiales</h4>
 
-                              <p class="text-center"> <img src="../../../assets/flecha.jpg" class="flecha"> {{pj.data.arriba}}</p>
-                              <p class="text-center"> <img src="../../../assets/flecha.jpg" class="flecha"> {{pj.data.abajo}}</p>
-                              <p class="text-center"> <img src="../../../assets/flecha.jpg" class="flecha"> {{pj.data.lateral}}</p>
-                              <p class="text-center"> <img src="../../../assets/flecha.jpg" class="flecha"> {{pj.data.normal}}</p>
+                              <p class="text-center"> <img src="assets/flecha.jpg" class="flecha"> {{pj.data.arriba}}</p>
+                              <p class="text-center"> <img src="assets/flecha.jpg" class="flecha"> {{pj.data.abajo}}</p>
+                              <p class="text-center"> <img src="assets/flecha.jpg" class="flecha"> {{pj.data.lateral}}</p>
+                              <p class="text-center"> <img src="assets/flecha.jpg" class="flecha"> {{pj.data.normal}}</p>
 
                          <h4 class="text-center">Smash Final</h4>
-                              <p class="text-center"> <img src="../../../assets/flecha.jpg" class="flecha"> {{pj.data.smash}}</p>
+                              <p class="text-center"> <img src="assets/flecha.jpg" class="flecha"> {{pj.data.smash}}</p>
 
                         <div class="acciones">
                             <button class ="btnEliminar" type="button" (click)="deletePJ(pj.id)" class="btn btn-danger">Eliminar</button>
